remove: make build script (win)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
         run: ./lit install
 
       - name: Build bot
-        run: ./luvit make
+        run: ./lit make
 
       - name: Make build folder
         run: mkdir build
